force-app/main/default/objects/Completed_Work_Log__c/Completed_Work_Log__c.object-meta.xml
<CustomObject>
    <label>Completed Work Log</label>
    <nameField>
        <displayFormat>WORK_LOG-{000000}</displayFormat>
        <label>Completed Work Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Work Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>