force-app/main/default/objects/Completed_Work_Log__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <label>Crew</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Crews</valueSetName>
    </valueSet>
</CustomField>