force-app/main/default/objects/Completed_Work_Log__c/fields/First_Misc_Material__c.field-meta.xml
<CustomField>
    <fullName>First_Misc_Material__c</fullName>
    <label>First Misc Material</label>
    <type>TextArea</type>
</CustomField>