force-app/main/default/objects/Completed_Work_Log__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Completed Work Logs</relationshipLabel>
    <relationshipName>Completed_Work_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>