force-app/main/default/objects/Completed_Work_Log__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <label>Measurement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>