force-app/main/default/objects/Completed_Work_Log__c/fields/Pay_Item__c.field-meta.xml
<CustomField>
    <fullName>Pay_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pay Item</label>
    <referenceTo>Pay_Item__c</referenceTo>
    <relationshipLabel>Completed Work Logs</relationshipLabel>
    <relationshipName>Completed_Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>