force-app/main/default/objects/Completed_Work_Log__c/fields/Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group__c</fullName>
    <inlineHelpText>Section of the job that is grouped together on the customer quote.</inlineHelpText>
    <label>Quote Line Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>