force-app/main/default/objects/Completed_Work_Log__c/fields/Second_Misc_Material__c.field-meta.xml
<CustomField>
    <fullName>Second_Misc_Material__c</fullName>
    <label>Second Misc Material</label>
    <type>TextArea</type>
</CustomField>