force-app/main/default/objects/Completed_Work_Log__c/fields/Third_Misc_Material__c.field-meta.xml
<CustomField>
    <fullName>Third_Misc_Material__c</fullName>
    <label>Third Misc Material</label>
    <type>TextArea</type>
</CustomField>