force-app/main/default/objects/Completed_Work_Log__c/fields/Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work__c</fullName>
    <description>CPQ Product from Pay_Item__c</description>
    <label>Type of Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>