force-app/main/default/objects/Completed_Work_Log__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LNFT</fullName>
            </value>
            <value>
                <fullName>SQFT</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>Yards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>