force-app/main/default/objects/Completed_Work_Log__c/fields/Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>Work_Performed__c</fullName>
    <label>Work Performed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installed</fullName>
                <default>true</default>
                <label>Installed</label>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>